# courseforge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
agent/: __init__.py  agent.py  apps.py  run_course_gen.py  tests.py
courseforge/: asgi.py  settings.py  urls.py  wsgi.py
courses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_add_course_generation_job.py  0003_add_course_generation_model.py  0004_add_flashcards.py  0005_coursegenerationjob_created_by_and_more.py
courses/templatetags/: markdown_extras.py
progress/: admin.py  apps.py  models.py
progress/migrations/: 0001_initial.py
static/css/: theme.css
templates/: base.html
templates/courses/: course_create.html  course_detail.html  course_list.html  exercise.html  flashcards.html  generating.html
templates/partials/: form_field.html
templates/users/: dashboard.html  home.html  login.html  register.html
users/: apps.py  tests.py  urls.py  views.py
