[project]
name = "courseforge"
version = "0.1.0"
description = "A learning platform where users create gamified courses on any topic using LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.2",
    "pydantic-ai>=1.60",
    "pydantic>=2",
    "psycopg2-binary",
    "python-dotenv",
    "pytest>=8.0",
    "pytest-django>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "courseforge.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v"
