[project]
name = "courseforge"
version = "0.1.0"
description = "A learning platform where users create gamified courses on any topic using LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2",
    "pydantic-ai>=1.60",
    "pydantic>=2",
    "psycopg2-binary",
    "python-dotenv",
    "markdown>=3.5",
    "gunicorn",
    "whitenoise",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "black>=24.0",
    "django-stubs>=5.0",
    "django-extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "courseforge.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "courseforge.settings"

[tool.black]
line-length = 120
target-version = ["py312"]
